# DAP

./: .gitignore  README.md  colmap_interface.py  depth2normal.py  depth2point.py  editing.py  get_lora_weights.py  infer_dataset.py  inference.py  mvs_interface.py  parallel_executor.py  pyproject.toml  requirements.txt  run-prediction.py  setup.py
config/: infer.yaml
datasets/: M3D.py  stanford2d3d.py  test.txt
ddpy_dap/: __init__.py  infer.py  run_prediction.py
ddpy_dap/config/: __init__.py
networks/: dap.py
test/: infer.py
utils3d/: __init__.py  numpy_ops.py  torch_ops.py
